--- a/public/index.html
+++ b/public/index.html
@@ -1,124 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hijama Cupping App</title>
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hijama Cupping App</title>
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <img src="%PUBLIC_URL%/logo.png" alt="Hijama Cupping App">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Main</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><button class="book-now">Book Now</button></li>
-            </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <section class="intro">
-            <div class="intro-text">
-                <h1>Expert Hijama Treatment</h1>
-                <p>We follow a holistic approach to healthcare</p>
-                <p>Cupping (Hijama in Arabic) is an ancient, holistic method for the treatment of a variety of diseases</p>
-                <button class="book-appointment">Book Appointment</button>
-            </div>
-            <img src="%PUBLIC_URL%/images/treatment.jpg" alt="Hijama Treatment">
-        </section>
-
-        <section class="services">
-            <h2>Services</h2>
-            <p>Hijama is a type of wet cupping that is frequently practiced in many Muslim countries...</p>
-            <div class="service-items">
-                <div class="service-item">
-                    <img src="%PUBLIC_URL%/images/dry-cupping.jpg" alt="Dry Cupping">
-                    <button>Book Appointment</button>
-                </div>
-                <div class="service-item">
-                    <img src="%PUBLIC_URL%/images/running-cupping.jpg" alt="Running Cupping">
-                    <button>Book Appointment</button>
-                </div>
-                <div class="service-item">
-                    <img src="%PUBLIC_URL%/images/bleeding-cupping.jpg" alt="Bleeding Cupping">
-                    <button>Book Appointment</button>
-                </div>
-            </div>
-        </section>
-
-        <section class="video">
-            <h2>Watch the video to see a practical example of how cupping is performed</h2>
-            <img src="%PUBLIC_URL%/images/blood-cupping.jpg" alt="Blood Cupping Video">
-        </section>
-
-        <section class="about">
-            <h2>About Us</h2>
-            <p>A dedicated service with the core mission to help...</p>
-            <button>Book an Appointment</button>
-            <button>About Us</button>
-            <img src="%PUBLIC_URL%/images/about-us.jpg" alt="About Us">
-        </section>
-
-        <section class="testimonials">
-            <h2>Our Patients Say</h2>
-            <div class="testimonial-items">
-                <div class="testimonial-item">
-                    <p>Neque porro quisquam est qui dolorem ipsum...</p>
-                    <h3>Joshua Jones</h3>
-                </div>
-                <div class="testimonial-item">
-                    <p>Neque porro quisquam est qui dolorem ipsum...</p>
-                    <h3>Paula Mora</h3>
-                </div>
-                <div class="testimonial-item">
-                    <p>Neque porro quisquam est qui dolorem ipsum...</p>
-                    <h3>Rhonda</h3>
-                </div>
-            </div>
-        </section>
-
-        <section class="contact">
-            <h2>Get in touch with your first booking</h2>
-            <input type="text" placeholder="Enter your name">
-            <input type="email" placeholder="Enter your email">
-            <button>Submit</button>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-section company">
-                <h3>Company</h3>
-                <ul>
-                    <li>About</li>
-                    <li>FAQ</li>
-                    <li>Career</li>
-                </ul>
-            </div>
-            <div class="footer-section legal">
-                <h3>Legal</h3>
-                <ul>
-                    <li>Terms of Use</li>
-                    <li>Privacy</li>
-                    <li>Cookie</li>
-                </ul>
-            </div>
-            <div class="footer-section social">
-                <h3>Social</h3>
-                <ul>
-                    <li>Facebook</li>
-                    <li>Twitter</li>
-                    <li>LinkedIn</li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+  <div id="root"></div>
 </body>
 </html>
